Added schema.graphql file for music store

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -99,7 +99,7 @@
 							<schemaPaths>
 								<param>src/main/resources/graphql-client</param>
 							</schemaPaths>
-							<packageName>com.example.demo.codegen</packageName>
+							<packageName>com.jbs.rockmusicstore.codegen</packageName>
 							<addGeneratedAnnotation>true</addGeneratedAnnotation>
 							<disableDatesInGeneratedAnnotation>true</disableDatesInGeneratedAnnotation>
 						</configuration>
